--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "googleapis": "^16.1.0",
     "morgan": "^1.7.0",
     "sqlite3": "^3.1.8"
   }
