--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/debamitro/hcmytproj#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "csslint": "^1.0.5",
     "express": "^4.14.0",
     "googleapis": "^16.1.0",
     "morgan": "^1.7.0",
